# flight-radar-pipeline

./: README.md  pyproject.toml  requirements.txt  run.py  scheduler.py
flight_radar_pipeline/: etl.py  extract.py  infrastructure.py  load.py  transform.py
